fixed login page spacing

--- a/css/index.css
+++ b/css/index.css
@@ -602,7 +602,7 @@ body .row .column img {
   background-color: rgba(255, 255, 255, 0.8);
   padding: 2rem;
   width: 35vw;
-  height: 100vh;
+  height: 100%;
 }
 .login-container .login-form-bg .form-header-login {
   text-align: center;
